syntax = "proto3";

option csharp_namespace = "GRSForumProto";

service GRSForumManager {
  rpc CreateThread (CreateThreadRequest) returns (GenericResponse);
  rpc Comment (CommentRequest) returns (GenericResponse);
}

message GenericResponse {
  bool succeeded = 1;
  optional string error = 2;
}

message CreateThreadRequest {
  string title = 2;
  string content = 3;
}

message CommentRequest {
  string threadId = 2;
  string content = 3;
}
